--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "from plotnine import *\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import torch"
+    "import torch\n",
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def standardize(data):\n",
     "    m = np.mean(data, axis=0)\n",
     "    s = np.std(data, axis=0)\n",
-    "    std_data = (data - m)/s\n",
-    "    return std_data"
+    "    strd_data = (data - m)/s\n",
+    "    return strd_data"
    ]
   },
   {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# standardizing the non-categorical features (the first ten features) in each data set\n",
-    "train_strd = pd.concat([standardize(train.iloc[:, 0:10]), train.iloc[:, 10:]], axis=1)\n",
-    "test_strd = pd.concat([standardize(test.iloc[:, 0:10]), test.iloc[:, 10:]], axis=1)\n",
-    "val_strd = pd.concat([standardize(val.iloc[:, 0:10]), val.iloc[:, 10:]], axis=1)"
+    "# standardizing the non-categorical features (the first ten features)\n",
+    "# also seperating the data into targets y and input features X\n",
+    "X_train = pd.concat([standardize(train.iloc[:, 0:10]), train.iloc[:, 10:-1]], axis=1)\n",
+    "y_train = train[\"Cover_Type\"]\n",
+    "\n",
+    "X_test = pd.concat([standardize(test.iloc[:, 0:10]), test.iloc[:, 10:-1]], axis=1)\n",
+    "y_test = test[\"Cover_Type\"]\n",
+    "\n",
+    "X_val = pd.concat([standardize(val.iloc[:, 0:10]), val.iloc[:, 10:-1]], axis=1)\n",
+    "y_val = val[\"Cover_Type\"]"
    ]
   },
   {
@@ -110,10 +117,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch import nn\n",
+    "\n",
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using {device} device\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# transforming our data into tensors\n",
+    "X_train_tensor = torch.tensor(X_train.values)\n",
+    "y_train_tensor = torch.tensor(y_train.values)\n",
+    "\n",
+    "X_test_tensor = torch.tensor(X_test.values) \n",
+    "y_test_tensor = torch.tensor(y_test.values)\n",
+    "\n",
+    "X_val_tensor = torch.tensor(X_val.values)\n",
+    "y_val_tensor = torch.tensor(y_val.values)"
+   ]
   }
  ],
  "metadata": {
