added some text

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -143,16 +143,18 @@
     "## Task 6\n",
     "In order to build a neural network and implement its trainin we are going to use the **PyTorch** library. There are several parameters and properties to be adressed when building a neural network. Below are the motivations for each of the choices.\n",
     "\n",
-    "#### Motivation\n",
-    " - **Depth**: Five hidden layers. \n",
-    " - **Width**: We follow the heuristic of smoothly increasing the width such that our widest layer should be close to the middle layer of the model, and then a similarly smooth decrease up until the output layer. During class, we were given the 2x heuristic, i.e. increase number of nodes from one layer to the next by 2x. \n",
+    "#### Motivations\n",
+    " - **Depth**: Our model consists of five hidden layers. We arrived at this from starting with zero layers and then adding one layer at a time until we deemed the improvements in training to be diminished.\n",
+    " - **Width**: We follow the heuristic of smoothly increasing the width such that our widest layer should be close to the middle of the model, and then a similarly smooth decrease until the output layer. During class, we were given the 2x heuristic, i.e. increase number of nodes from one layer to the next by 2x. \n",
     " Our model's widths:\n",
     "     - input: 54,\n",
     "     - hidden layers: 108 --> 216 --> 216 --> 108 --> 54,\n",
     "     - output layer: 7 \n",
     " - **Activation functions**: The purpose of the activation functions is to introduce non-linearity such that we can eventually reach a representation of the data where it is linearly separable. The rectified linear unit (ReLU) is the most widely used activation function. Its gradient is constant (where it is differentiable) and it is fast to compute. We use this in all of our hidden layers.\n",
+    " - **Loss function**: Because the task is classification, we model probabilities (between 0 and 1). As such, it is natural to maximize conditional log-likelihood, but this is closely related to minimizing cross-entropy. We thus choose the cross-entropy as our loss function.\n",
     " - **Output function**: We use the softmax function in order to model the final probabilities. This function generalizes the logistic function used in binary classification to more than two classes, and as such, is a natural way of modeling multinomial probabilities.\n",
-    " - **Loss function**: Because the task is classification, we model probabilities (between 0 and 1). As such, it is natural to maximize conditional log-likelihood, but this is equivalent to minimizing cross-entropy. We thus choose the cross-entropy as our loss function."
+    " - **Parameter initialization**: The parameter initializations take place automatically in the *nn.Linear()* functions in the *NerualNetwork* class. The method enmployed is the same for both biases and weights and is very similar to LeCun or Glorot initialization. The parameters are sampled uniformly on the (-sqrt(k), sqrt(k)) interval where k is defined as 1/#incoming features, thus ensuring that we are sampling values relatively close to zero. It is important to initialize weights close to zero as this allows for the necessary complexity of the model to develop through training as opposed to us imposing it.\n",
+    " - **Training algorithm**: In order to make our optimization more robust against imbalanced curvature and to reduce variance, we want to choose a version of stochastic gradient descent that employs momentum that decays over time. One such algorithm is the adaptive moments algorithm called \"Adam\", and this will be our choice.  \n"
    ]
   },
   {
@@ -844,23 +846,7 @@
    "metadata": {},
    "source": [
     "## Task 7\n",
-    "Judging from the training and validation loss plot below:\n",
-    "\n",
-    " - has the training error converged?\n",
-    "    Yes, it is very stable and has settled relatively close to zero.\n",
-    "\n",
-    " - does the validation curve look as expected?\n",
-    "    Yes, the validation looks as expected. Apart from the very beginning (which is still within the margin of error) of the curve, the validation is steadily sitting on top of the training.\n",
-    "\n",
-    " - are there any indications of overfitting?\n",
-    "   No, "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task 8\n"
+    "See plot below."
    ]
   },
   {
@@ -887,6 +873,22 @@
     "plt.legend()\n",
     "plt.title(\"Training and Validation Loss Curve\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Judging from the training and validation loss plot:\n",
+    "\n",
+    " - has the training error converged?\n",
+    "    Yes, it looks relatively stable and seems to have reached a plateau.\n",
+    "\n",
+    " - does the validation curve look as expected?\n",
+    "    Yes, the validation looks as expected. Apart from the very beginning (which is still within the margin of error) of the curve, the validation is steadily sitting on top of the training. It also seems to plateau which is what we are looking for while minimizing the cross-entropy.\n",
+    "\n",
+    " - are there any indications of overfitting?\n",
+    "   Maybe some slight indications of starting to overfit around epoch 80 as we see some slightly larger spikes in the training curve there. These are still relatively small, however, and should rather just act as an indication of having reached a point of diminishing returns. In general, no indications of overfitting from the training curve."
    ]
   },
   {
@@ -982,7 +984,155 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above print-out is interpreted as: \"among the misclassifications of our test data, observations truly belonging to class 4 occur more than twice as often as class 4 observations occur in the original data\". This acts as evidence in favor of our hypothesis. "
+    "The above print-out is interpreted as: \"among the misclassifications of our test data, observations truly belonging to class 4 occur more than twice as often as class 4 observations occur in the original data\". This acts as evidence in favor of our hypothesis. Were we to adress this class imbalance in some productive way, we might be able to slightly increase the accuracy.\n",
+    "\n",
+    "An accuracy of approx 0.96, however, is already really good and this suggests that our model generalizes well to unseen data. \n",
+    "\n",
+    "What could be studied further in order to better understand the accuracy are the specific misclassifactions, i.e. which classes are misclassified into what other classes. To do this, a confusion matrix could be employed, which we will leave below, without commenting on it (as this was not part of the assignment)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Predicted</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20341</td>\n",
+       "      <td>695</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>933</td>\n",
+       "      <td>27301</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>44</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3403</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>258</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>24</td>\n",
+       "      <td>120</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>801</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>123</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1591</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>187</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1901</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Predicted      1      2     3    4    5     6     7\n",
+       "True                                               \n",
+       "1          20341    695     0    0    5     1    27\n",
+       "2            933  27301    38    0   77    44     3\n",
+       "3              0     34  3403   30    5    51     0\n",
+       "4              0      0    21  258    0     4     0\n",
+       "5             24    120     6    0  801     4     0\n",
+       "6              0     18   123   22    1  1591     0\n",
+       "7            187     31     0    0    1     0  1901"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_actu = pd.Series(true_labels, name='True')\n",
+    "y_pred = pd.Series(pred_labels, name='Predicted')\n",
+    "df_confusion = pd.crosstab(y_actu, y_pred)\n",
+    "df_confusion"
    ]
   }
  ],
