--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "## Task 2\n",
-    "We then plot the class distribution of the target variable 'Cover_Type' in the form of a histogram. The plot tells us that the distribution is highly skewed in favor of two of the seven classes (imbalanced). As we have less data for the remaining five classes we should expect to see lower prediction accuracy for these. "
+    "We plot the class distribution of the target variable 'Cover_Type' in the form of a histogram. The plot tells us that the distribution is highly skewed in favor of two of the seven classes. This could lead to the trained model having lower prediction accuracy on the classes that are under-represented as it will potentially \"learn\" less about them simply as a result of encountering them less often."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "## Task 4\n",
-    "Improves stability.\n",
+    "Standardization is important from the perspective of increasing the robustness of the optimization. Having wildly different ranges in different features could potentially lead to very large deviations as a result of the noise that is incorporated by the stochastic gradient descent.\n",
     "\n",
     "The standardization should take place **after** the split into training, validation and test data. This is because the mean and standard deviation might no longer be entirely representative for the subsets of data if they are calculated using the whole dataset. In our case, it probably doesn't make a lot of difference, due to the large sizes of even the subsets, but in order to follow good practice, we split the data first."
    ]
