added some text

--- a/project2/project2.ipynb
+++ b/project2/project2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Task 1\n",
-    "Below, we are following "
+    "Below, we are following the [tensorflow tutorial](https://www.tensorflow.org/tutorials/images/cnn) on convolutional neural networks (CNNs) for [CIFAR images](https://www.cs.toronto.edu/%7Ekriz/cifar.html) classification. In this first task, we mimic the tutorial completely using a basic CNN based on ReLU activation functions. We call this the **\"Basic ReLU model\"**."
    ]
   },
   {
