--- a/project2/project2.ipynb
+++ b/project2/project2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Task 1\n",
-    "Below, we are following the [tensorflow tutorial](https://www.tensorflow.org/tutorials/images/cnn) on convolutional neural networks (CNNs) for [CIFAR images](https://www.cs.toronto.edu/%7Ekriz/cifar.html) classification. In this first task, we mimic the tutorial completely using a basic CNN based on ReLU activation functions. We call this the **\"Basic ReLU model\"**."
+    "Below, we are following the [tensorflow tutorial](https://www.tensorflow.org/tutorials/images/cnn) on convolutional neural networks (CNNs) for [CIFAR images](https://www.cs.toronto.edu/%7Ekriz/cifar.html) classification. In this first task, we mimic the tutorial completely using a basic CNN based on ReLU activation functions. We call this the **\"Basic ReLU model\"**. The assessment of the model (and all the following models in subsequent tasks) are given in the form of training/test accuracy and loss plots."
    ]
   },
   {
@@ -325,6 +325,13 @@
     "plt.title('Basic ReLU model: loss')\n",
     "plt.legend(loc='lower left')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen from the abover plots, the **Basic ReLU model** resulted in max classification accuracy of around 70 %. From the loss plot, the training seems to converge, but the u-shape of the validation plot and where its minimum is placed on the epoch-axis indicate that there is quite a bit of overfitting that takes place long before the convergence of the training is sufficiently reached. "
    ]
   },
   {
