--- a/project2/project2.ipynb
+++ b/project2/project2.ipynb
@@ -617,9 +617,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the above plots the max accuracy of the basic tanh model is around 67 %. This is slightly worse, but quite similar to the approx. 70 % that we got from the basic ReLU model. Looking at the loss, we note two things: the training convergence for the tanh model, for the same number of epochs, is slower than for the ReLU model; and the minimum validation loss is quite a bit higher in the tanh model. \n",
+    "Looking at the above plots the max accuracy of the basic tanh model is around 67 %. This is slightly worse, but quite similar to the approx. 70 % that we got from the basic ReLU model. Looking at the loss, we note two things: the training convergence for the tanh model, for the same number of epochs, is slower than for the ReLU model; and the minimum validation loss is quite a bit higher in the tanh model. Indications of overfitting are present here as well.\n",
     "\n",
-    "Crudely speaking, the loss might be higher as a result of poor training, and the poor training might be due to the gradient descent not finding minima as fast while using the tanh activation function. This is quite reasonable as our pixel values have been normalized to be between 0 and 1, and on this interval, the gradient of the tanh is strictly less than for ReLU, and in our optimization step we are using the same (default) learning rate $\\alpha$."
+    "Crudely speaking, the loss might be higher as a result of poor training, and the poor training might be due to the gradient descent not finding minima as fast while using the tanh activation function. This is quite reasonable as our pixel values have been normalized to be between 0 and 1, and on this interval, the gradient of $\\tanh(x)$ is strictly less than ReLU$(x)$, and in our optimization step we are using the same (default) learning rate $\\alpha$. In order to compensate for this smaller gradient, we would probably have to increase the learning rate in order for $\\tanh$ to converge equally fast."
    ]
   },
   {
@@ -627,14 +627,21 @@
    "metadata": {},
    "source": [
     "## Task 3\n",
-    "The increase in channels is partly to compensate for the reduction in pixel dimensions that occurs naturally as a result of the convolutions and (chosen pooling method). As we remove pixels, we want to store more information on the ones that remain. One example of channel usage would be to store the different rotations of the image that remains after the convolution. Furthermore, we choose #channels to be 32 and 64 as these are powers of 2, and the language of the computer is binary - therefor easing the computations."
+    "In this task, we want to give an explanation of why the increase in channels between layers is necessary for the CNN. Similarly to feedforward neural networks, we want the dimensionality of the layers to increase smoothly in the beginning and decrease smoothly towards the end where we need the final layer to be a vector such that it can easily be mapped to the final classification vector. The initial increase could (somewhat heuristically) be seen as the process of going to a higher-dimensional representation of the input where a sort of feature selection/feature detangling can take place.\n",
+    "\n",
+    "As the convolution operator itself (as long as kernel size > 1x1) naturally shrinks the image, in order for this initial increase to take place, we need some counterweight to both store information about the pixels that were lost, but also give some extra space for this feature separation to take place. This is where the channels come in. Looking above to the table that summarizes the basic tanh model, we can see that the increase of dimensionality actually only takes place in the first convolution layer, where the total dimensionality goes from 32x32x3 to 30x30x32. After that, each convolution results in a lower total dimensionality than before.\n",
+    "\n",
+    "It is hard to give an intuitive interpretation of what the channels (apart from the input RGB) actually mean, but loosely speaking, we could say that they store spatial information about the image that would get lost if we were to simply flatten the image to a vector immediately. There are some examples where the channels store concrete information, such as rotations of the image for example, but this seems more like a special case usage rather than the norm (see Figure 9.9 in Goodfellow).\n",
+    "\n",
+    "Furthermore, why 32 and 64 were specifically chosen as the channel sizes, it is because they are powers of two, and therefore in the natural language of the computer."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4\n"
+    "## Task 4\n",
+    "In this task we are going to add a modification to the basic ReLU model in the form of **batch normalization**. We are then again going to compare the results as we have done previously. For the batch normalization we use a mini-batch size of 16 (as opposed to the default value of 32 that we have used for the previous models). We call this new model the **ReLU + batch normalization model**."
    ]
   },
   {
@@ -933,6 +940,17 @@
     "plt.title('Basic ReLU model: loss')\n",
     "plt.legend(loc='lower left')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing accuracies, we see that (from print-out above plots) the basic ReLU model has slightly higher test accuracy: 69 % for the basic ReLU as opposed to 66 % for the one using batch normalization. Regarding the losses of the two models, the batch normalization model seems to converge in training a lot faster in number of epochs (albeit more than twice the compute time) and the u-shape of the validation curve is a lot less pronounced, indicating less overfitting which itself implies better generalization to new data, of the batch normalization model.\n",
+    "\n",
+    "In the best case scenario for each of the two models, they perform very similarly on loss and accuracy. The real benefit we see in the batch normalization model is the reduced overfitting. Batch normalization works similarly to stocahstic gradient descent in the way that it adds a bit of noise to the model. This is probably why we see improvents in the fit of the model. However, this coms at the price of introducing new trainable parameters and the extra compute time that accompanies them, and the extra compute that is required for the normalization itself.\n",
+    "\n",
+    "The batch normalization should also theoretically increase the stability of the model, i.e. that small perturbations in the input should not affect the output drastically. This, however, is hard to tell without compiling several different training runs together."
    ]
   },
   {
