answered the remaining questions

--- a/project2/project2.ipynb
+++ b/project2/project2.ipynb
@@ -957,7 +957,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 5\n"
+    "## Task 5\n",
+    "We are now going to try out some basic data augmentation techniques in a model and see how the results compare to the basic ReLU model. We will call this new model the **ReLU + data augmentation model**.\n",
+    "\n",
+    "We are using a very basic form of data augmentation consisting of random (50 % chance) horizontal flips and a small shift (also random) in the contrast of the image. The motivation for using such a simple data augmentation is that as we add more complex augmentation methods, we are essentially expanding the domain that we, through training, have to explore - i.e. we require more training, more epochs. Since we don't want to spend too much time on compute, we deem our basic data augmentation to be sufficient to explore its potential benefits.\n",
+    "\n",
+    "Below are some example augmentations of a frog plotted. The change in contrast is barely visible.\n",
+    "\n",
+    "We are then going to compare the results as previously."
    ]
   },
   {
@@ -1006,6 +1013,14 @@
     "  ax = plt.subplot(2, 3, i + 1)\n",
     "  plt.imshow(augmented_image)\n",
     "  plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Why data augmentation can help reduce overfitting and improve generalization power\n",
+    "As we have already mentioned, with data augmentation we are potentially expanding our data space. An expanded training space implies less risk of having to extrapolate on future data, thereby increasing the generalization power of the model. Furthermore, we are also filling in the gaps in the space that we already occupy, i.e. filling in the blanks but also making each area more dense. This should lead to a smoother fit to the data, i.e. reduce overfitting. Some types of data augmentation could also essentially be seen as a sort of noise injection into the model, similarly to the batch normalization. Noise injection is a type of regularization that mainly focuses on reducing the complexity."
    ]
   },
   {
@@ -1331,17 +1346,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why data augmentation can help reduce overfitting and improve the generalization power of the model\n",
-    " - injects noise - reduces overfitting\n",
-    " - extends space of interpolation - increasing the generalization of the model\n",
-    " - "
+    "As opposed to previous models, the data augmentation had higher test accuracy than the basic ReLU model: 74 % as opposed to 69 %. From the loss plots we can also see that tha data aumentation model seems to converge faster than the basic ReLU model but at a slightly higher value. However, due to the overfitting thats indicated in the basci ReLU model, we shouldn't place too much emphasis on the fact that the training loss is slightly higher for the batch normalization model. Actually, the (light) plateauing of the validation loss curve from the batch normalization model indicates that this is a more proper fit that tests better on unseen data, i.e. the generalization has improved.\n",
+    "\n",
+    "It should also be mentioned that the time it took to train each model for 30 epochs was pretty much identical. Thus, the data augmentation model has improved accuracy, reduced validation loss, reduced overfitting and improved generalization power at no apparent cost. One would have to run the training many times in order to really cement this hypothesis."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 6\n"
+    "## Task 6\n",
+    "In this final task we are going to assess the role of color information in feature extraction by converting our input images to grayscale and train a basic ReLU model on this new training set. We call this new model the **ReLU + grayscale images model**. Again we are going to compare the accuracy and loss to the basic ReLU model.\n",
+    "\n",
+    "Below is an example image of a frog in the new data set."
    ]
   },
   {
@@ -1379,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1611,6 +1628,7 @@
     }
    ],
    "source": [
+    "# grayscale images model\n",
     "model_gray = models.Sequential(\n",
     "    [\n",
     "        # only difference from basic model is channel dimension\n",
@@ -1680,6 +1698,17 @@
     "plt.title('Basic ReLU model: accuracy')\n",
     "plt.legend(loc='lower right')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the grayscale model, the test accuracy evaluated to 68 % as opposed to the 69 % for the basic ReLU model. Regarding the loss, the convergence seems to be slightly slower for the grayscale model, and the minimum validation loss is slightly higher than the minimum validation loss for the basic ReLU model. They are, however, very similar in all aspects.\n",
+    "\n",
+    "The main difference between the two models is that the training convergence is slightly slower and the overfitting slightly less for the grayscale model. One could argue that by removing color we force the model to focus more on contours and shapes. With less complexity, we are less prone to overfitting. It should also be mentioned that the grayscale model computed in roughly two thirds of the time that it took the basic ReLU model. As such, this seems like a very fair trade between loss and efficiency on the one hand, and generalization power and training convergence speed on the other.\n",
+    "\n",
+    "This seems very much like a no-free-lunch-scenario in the sense that the trade seems very fair."
    ]
   }
  ],
